CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")
SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}")

PROJECT(LYNN)

SET(CMAKE_CXX_FLAGS "-g -Wall -Wno-deprecated -DHAVE_NETINET_IN_H -O1")

# 3rd party
FIND_PACKAGE(Thrift REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(GTest REQUIRED)

ADD_SUBDIRECTORY(src)

